--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job Run</title>
     <link rel="icon" type="image/png" href="/favicon.png" /> <!-- ✅ favicon -->
+     <!-- Google AdSense (place once in <head>) -->
+    <script async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2885354652181746"
+      crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
